SET( 
	SRC_FILES 
	waghihrse.cpp
)

SET( 
	INCLUDE_DIRS 
	${CMAKE_CURRENT_SOURCE_DIR}/
	${CMAKE_CURRENT_SOURCE_DIR}/../include/
)

SET( LIBRARIES )

INCLUDE_DIRECTORIES( ${INCLUDE_DIRS} )
ADD_LIBRARY( ${PROJECT_NAME}Core ${SRC_FILES} )

INSTALL(
	TARGETS ${PROJECT_NAME}Core
	RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT runtime
	LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT devel
	ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT devel
)

